Fixed whitespace issue at top of page. Added basic navigation bar and stylings for navigation bar. Installed react router dom

--- a/client/src/containers/App.css
+++ b/client/src/containers/App.css
@@ -1,3 +1,4 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  padding: 0;
 }
